# delta

./: .envrc  .envrc.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluff.local  .sqlfluff.prod  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  workspace.yaml
.agents/skills/delta-docs-auditor/: SKILL.md
.agents/skills/delta-platform-implementer/: SKILL.md
.agents/skills/delta-test-coverage-guardian/: SKILL.md
.github/workflows/: build-and-deploy.yml  build-dbt-catalog.yml  deploy.yml
.specify/: init-options.json
.specify/memory/: constitution.md
cockpit/: assets.py  dbt_project.py  definitions.py  project.py  scopes.py
cockpit/assets/: __init__.py  _shared.py  dbt.py  warehouse.py
cockpit/core/: __init__.py  defs.py
cockpit/core/assets/: __init__.py  mappings.py
cockpit/core/jobs/: __init__.py  core_jobs.py
cockpit/core/tests/: test_core_assets.py  test_core_jobs.py
cockpit/css/: __init__.py  defs.py
cockpit/css/assets/: __init__.py  raw.py  staging.py  utility_rates.py
cockpit/css/jobs/: __init__.py  css_jobs.py
cockpit/css/tests/: test_css_assets.py  test_css_jobs.py  test_raw.py  test_utility_rates.py
cockpit/mitos/: __init__.py  defs.py
cockpit/resources/: __init__.py  datahub.py  warehouse.py
cockpit/shared/: utils.py
cockpit/tests/: test_assets.py  test_defs.py  test_resources.py
dbt/: .user.yml  dbt_project.yml  profiles.yml  selectors.yml
dbt/models/: schema.yml
delta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: README.md
scripts/: init_db.sh  load_local_raw_csv.py
specs/: BACKLOG.md
specs/003-mitos-css-scope-planning/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/utility-rate-setting/: spec.md
sqlfluff_libs/: dbt.py
(+37 files in other folders)
